@@ -7,4 +7,3 @@
     = link_to_function("Show more #{items}...", "crm.paginate('#{items}')")
   - else
     = render :partial => "common/total"
-#page{ hidden }= @page
